--- a/projet-argentbank/package.json
+++ b/projet-argentbank/package.json
@@ -11,8 +11,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router": "^5.2.0",
+    "react-router": "^6.2.1",
     "react-router-dom": "^6.1.1",
+    "react-router-native": "^6.2.1",
     "react-scripts": "4.0.3",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.3",
